# xHook-cmake

libxhook/jni/: CMakeLists.txt  xhook.h
